# Ruscall

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  compile.bat  test.rsc
src/: cmd_args.rs  hello.rs  lib.rs  main.rs
src/compile/: ast.rs  code_gen.rs  error.rs  infixes.rs  ir_tree.rs  mangling.rs  mod.rs  output_file.rs  parser.rs  resolve_op.rs  show_type.rs  to_llvm_type.rs  types.rs
src/compile/ast_transformer/: ast_to_hir.rs  create_constructor.rs  currying_func.rs  mod.rs  resolve_named_params_constructor_call.rs  resolve_op.rs
src/compile/ir/: ast.rs  hir.rs  mir.rs  mod.rs
src/compile/new_types/: mod.rs  subst.rs  traits.rs  typ.rs  type_inference.rs  types.rs  unify.rs
src/compile/parser/: mod.rs  parser.rs  skipper.rs  types.rs
src/compile/semantic_analysis/: ast_to_ir.rs  binding_group.rs  buildin_func.rs  global_variable_table.rs  hir_to_mir.rs  ir.rs  ir_tree.rs  mod.rs  resolve_op.rs  type_check.rs  type_env.rs  type_get.rs  type_variable_table.rs  variable_table.rs
src/compile/types/: mod.rs  pred.rs  qual.rs  scheme.rs  show_type.rs  types.rs
src/my_llvm/: block.rs  codegen.rs  execution_engine.rs  function.rs  generic_value.rs  helper.rs  mod.rs  module.rs  pass.rs  target.rs  types.rs  value.rs  value_ref.rs
src/stdlib/c/: hello.c  test.c
tests/: code_gen_test.rs  test.rs
tests/all/: code_gen_test.rs  main.rs  moc_llvm_module.rs  test.rs
tests/all/test_data/: explicit_quantify.rsc  quantify.rsc  test1.rsc  (+10 more)
tests/test_data/: test10.rsc  test11.rsc  test3.rsc  test4.rsc  test5.rsc  test6.rsc  test7.rsc
(+12 files in other folders)
