[package]
name = "Ruscall"
version = "0.1.0"
authors = ["elipmoc <relipmoc101@gmail.com>"]
readme = "README.md"
build="build.rs"
license = "MIT"

[lib]
name="ruscall"
path="src/lib.rs"

[target.'cfg(windows)'.dependencies]
llvm-sys = "60.2"

[target.'cfg(not(windows))'.dependencies]
rustc-llvm-proxy="0.1"

[target.'cfg(not(windows))'.dependencies.llvm-sys]
version="60.2"
features=["no-llvm-linking"]

[dependencies]
combine = "3.3.0"
libc="0.2"

[build-dependencies]
cc = "1.0"

[patch.crates-io]
rustc-llvm-proxy={git='https://github.com/elipmoc/rustc-llvm-proxy.git'}

