[package]
name = "ruscall"
version = "0.5.0"
authors = ["elipmoc <relipmoc101@gmail.com>"]
readme = "README.md"
build="build.rs"
license = "MIT"

[lib]
name="ruscall"
path="src/lib.rs"

[dependencies]
llvm-sys = "60"
libc="0.2"
combine = "3.3.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm6-0" }

[patch."https://github.com/TheDan64/inkwell"]
inkwell = { git = "https://github.com/elipmoc/inkwell", branch = "llvm6-0"}

[build-dependencies]
cc = "1.0"

